name:                WeatherCharter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/WeatherCharter#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable WeatherCharter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules: Args,
                 Chart,
                 Queries,
                 Types
  build-depends:       base >= 4.7 && < 5,
                       optparse-applicative,
                       time,
                       HDBC-sqlite3,
                       HDBC,
                       bytestring,
                       smtp-mail,
                       Chart,
                       Chart-cairo,
                       lens,
                       bytestring,
                       base64-bytestring,
                       colour,
                       uuid,
                       data-default,
                       data-default-class,
                       random,
                       text
